# yakety

./: CMakeLists.txt
.devcontainer/: Dockerfile  build.sh  devcontainer.json
cmake/: BuildWhisper.cmake  PlatformSetup.cmake
src/: transcribe.c
src/linux/: app.c  clipboard.c  dialog.c  http.c  keylogger.c  logging.c  menu.c  overlay.c  utils.c
